# Software_Lab

./: 19CS10031_Assign1.rar  README.md  Vector.py
19CS10031_FLAT_Assign1/: file.cpp
Assig3_Theory/: Application.cpp  Booking.cpp  Booking.h  BookingClasses.cpp  BookingClasses.h  Date.cpp  Date.h  Design.txt  Givem_Application_Test.txt  Passenger.cpp  Passenger.h  Railway.h  Railways.cpp  Readme.md  Station.cpp  Station.h  TestPlan.txt  Unit-Application_test.txt  a.out
Assig5_Theory/: Application.cpp  ApplicationTestResult.txt  Booking.cpp  Booking.h  BookingClasses.cpp  BookingClasses.h  CMakeLists.txt  Concession.cpp  Concession.h  Date.cpp  Date.h  Divyaang.cpp  Divyaang.h  Exception.h  Gender.cpp  Gender.h  Givem_Application_Test.txt  Main.cpp  Name.cpp  Name.h  Passenger.cpp  Passenger.h  Railway.cpp  Railway.h  Railways.cpp  Readme.md  Station.cpp  Station.h  TestPlan.txt  TestReport.txt  Unit-Application_test.txt  UnitTestResult.txt  a.out
Assignment2/PART1/: InputField.py  InputFrame.py  OutputFrame.py  __init__.py  interface.py  main.py
C++ program/: CMakeLists.txt  README.md  a.out  file_watcher.cpp  file_watcher.h  index.txt  main.cpp  noveel_parser.cpp  novel_parser.cpp  novel_parser.h  parser.cpp  parser.h  play_parser.cpp  play_parser.h
New folder/: BookingClasses.cpp  BookingClasses.h  Date.h  Passenger.cpp  Railway.h  Railways.cpp  Station.h
TGHM_final/: package.json
assign_1_Theory/: Fraction.cpp  Fraction.h  Fraction_19CS10051  TestFraction.cpp  a  a.out  main.cpp
datascience_assignment/: main.py  requirements.txt  setup.py
(+25 files in other folders)
